--- a/4 GII/2do Semestre/PINF/Clase/Presentación 2/Presentación/Presentación Fantasy 2.tex
+++ b/4 GII/2do Semestre/PINF/Clase/Presentación 2/Presentación/Presentación Fantasy 2.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 %% Juego de caracteres usado en el archivo fuente: UTF-8
 \usepackage{ucs}
