Corregido el documento de pinf

--- a/4 GII/2do Semestre/PINF/Clase/Clase 3 de abril/Resumen del proyecto.tex
+++ b/4 GII/2do Semestre/PINF/Clase/Clase 3 de abril/Resumen del proyecto.tex
@@ -123,7 +123,7 @@
 		A modo de juego, los niños podrán crear historias interactivas y los profesores podrán evaluarlos.
 		
 		\textbf{Palabras clave:}\\
-		Fantasía, aprendizaje, desarrollo, puntos activos, ilusiona, entretenimiento, creatividad, cuestionario, evaluación, enseñanza, ciencia, unión europea, niños-gente.
+		Fantasía, aprendizaje, desarrollo, ilusiona, entretenimiento, creatividad, cuestionario, evaluación, enseñanza, ciencia, unión europea.
 	\end{abstract}
 
 	\thispagestyle{empty}
@@ -145,10 +145,10 @@
 
 \section{Introducción}
 \subsection{Motivación}
-Es un proyecto impuesto para aprobar la asignatura y, a nivel profesional, nos sirve para ganar experiencia laboral y enfrentarnos a situaciones reales con una clienta exigente y, bajo el amparo de la unión europea.
+Es un trabajo de la asignatura ``Proyectos Informáticos'' que, a nivel profesional, nos sirve para ganar experiencia laboral y enfrentarnos a situaciones reales de cara a una clientela exigente.
 
 \subsection{Descripción del sistema actual}
-Inicialmente, nuestra clienta contaba con una aplicación que mostraba en una página la información a cerca de un tema y los alumnos no se centraban en aprender, sino que iban directamente a hacer el cuestionario final con el objetivo de terminar antes.
+Inicialmente, nuestra clienta contaba con una aplicación que mostraba en una página la información a cerca de un tema y los alumnos no se centraban en aprender, sino que iban directamente a hacer el cuestionario final con el objetivo de terminar antes. Esto hace que los alumnos no aprendan como es debido ni fomenten su imaginación ni su creatividad.
 
 \subsection{Objetivos y alcance del proyecto}
 \subsubsection{Objetivos}
@@ -176,7 +176,10 @@ La metodología usada será \textbf{Scrum}: Método de desarrollo ágil caracter
 
 \subsection{Planificación del proyecto}
 El proyecto tendrá una duración de tres meses y se realizarán reuniones semanales con el cliente de una hora de duración como máximo.
-\includepdf[pages=-]{Planificacion}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.85]{Gantt.pdf}
+\end{figure}
 
 \subsection{Organización}
 \subsubsection{Roles}
