Avanzado en la traducción del documento final de pinf

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/AnalisisRequisitos.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/AnalisisRequisitos.tex
@@ -1,6 +1,8 @@
 \chapter{Análisis de requisitos}
 \section{Workspace}
-El diseño gráfico usado deberá ser el mismo que el de la página de Stimey en todos los iconos usados: \url{https://stimey.eu/home}. Si necesitamos algo más, Alecia, nos lo podría facilitar.
+El diseño gráfico usado deberá ser el mismo que el de la página de \href{https://stimey.eu/home}{Stimey} en todos los iconos usados.
+
+Podremos destacar dos roles de usuario: profesores y alumnos.
 
 El profesor tendrá más permisos y privilegios que el alumno, de forma que pueda crear fantasías para evaluar a sus alumnos y ellos tendrán que completarlas o crear las que el profesor les ponga como trabajo.
 
